--- a/src/components/ProductCard/card.module.css
+++ b/src/components/ProductCard/card.module.css
@@ -2,8 +2,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  max-width: 200px;
+  max-width: 250px;
+  width: 100%;
   max-height: 500px;
+  margin-right: 20px;
   margin-bottom: 40px;
   border-radius: 10px;
   overflow: hidden;
@@ -16,7 +18,7 @@
   transform: scale(1.05);
 }
 
-.image {
+.image img {
   width: 100%;
   height: 200px;
   object-fit: cover;
