--- a/src/components/CartItem/cartItem.module.css
+++ b/src/components/CartItem/cartItem.module.css
@@ -4,9 +4,9 @@
 }
 
 .cartItem td {
+  vertical-align: middle;
   padding: 0.7em 1em;
   border-top: 1px solid var(--border-color);
-  vertical-align: middle;
 }
 
 .cartImage {
@@ -83,7 +83,9 @@
   .cartItem td {
     display: block;
     text-align: right !important;
+  }
 
+  .hasTitle {
     &:before {
       content: attr(data-title) ': ';
       font-weight: 700;
@@ -108,9 +110,9 @@
 
   .cartRemove {
     position: absolute;
-    right: 0;
     top: 50%;
-    transform: translateY(-50%);
+    right: 0;
     border-top: 0 !important;
+    transform: translateY(-50%);
   }
 }
