--- a/src/components/global.css
+++ b/src/components/global.css
@@ -30,6 +30,8 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: 'Josefin Sans', sans-serif;
   font-weight: 300;
   color: var(--primary-font-color);
@@ -43,14 +45,14 @@ body {
 }
 
 .screenReaderText {
-  border: 0;
-  clip: rect(1px, 1px, 1px, 1px);
-  clip-path: inset(50%);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
   position: absolute;
   width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  border: 0;
+  overflow: hidden;
   word-wrap: normal !important;
 }
