--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -9,5 +9,25 @@
 }
 
 .logo {
-  margin-right: 20px;
+  margin-right: 40px;
+}
+
+.cart {
+  margin-left: auto;
+}
+
+@media screen and (max-width: 450px) {
+  .headerInner {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .logo {
+    margin-right: 0;
+  }
+
+  .cart {
+    margin: auto;
+  }
 }
