--- a/src/components/Menu/menu.module.css
+++ b/src/components/Menu/menu.module.css
@@ -1,5 +1,15 @@
 .menu {
   display: flex;
   align-items: center;
-  width: 100%;
+  /* width: 100%; */
+}
+
+.list {
+  padding: 0;
+}
+
+@media screen and (max-width: 450px) {
+  .menu {
+    margin: auto;
+  }
 }
